--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm install -g newman
 
       - name: Run Newman tests
-        run: newman run SpringBoot_ArgoCD/test/system/Postman test
+        run: newman run src/test/system/test.postman_collection.json
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
