--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -96,42 +96,38 @@ jobs:
           # newman run collection.json -e environment.json
 
   deploy-to-production:
-  runs-on: ubuntu-latest
-  if: github.ref == 'refs/heads/main'
-  steps:
-    - name: Checkout GitOps repository
-      uses: actions/checkout@v4
-      with:
-        repository: 'Vukischmucki/ArgoCD_GitOps'
-        token: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
-        ref: main
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Checkout GitOps repository
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ github.actor }}/ArgoCD_GitOps
+          token: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
+          ref: main
 
-    - name: Update image tag with version from staging in production values.yml
-      run: |
-        version=$(grep 'tag:' values_staging.yml | awk '{print $2}')
-        sed -i "s/tag: .*/tag: $version/" values_production.yml
+      - name: Update image tag with version from staging in production values.yml
+        run: |
+          version=$(grep 'tag:' values_staging.yml | awk '{print $2}')
+          sed -i "s/tag: .*/tag: $version/" values_production.yml
 
-    - name: Setup Global Git Config
-      run: |
-        git config --global user.email "github-actions@github.com"
-        git config --global user.name "github-actions"
+      - name: Commit changes
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions"
+          git add values_production.yml
+          git commit --allow-empty -m "Deploy $version to production"
 
-    - name: Create New Branch
-      run: |
-        git checkout -b branch-fuer-aenderungen
+      - name: Push to new branch
+        run: |
+          git branch -M production-deploy-$GITHUB_RUN_ID
+          git push -u origin production-deploy-$GITHUB_RUN_ID
 
-    - name: Add values_production.yml and Commit Changes
-      run: |
-        git add values_production.yml
-        git commit --allow-empty -m "Deploy $version to production"
-
-    - name: Push Branch
-      run: |
-        git push origin branch-fuer-aenderungen
-
-    # Hier wird der Pull Request erstellt
-    - name: Create Pull Request
-      run: |
-        gh pr create --base master --head branch-fuer-aenderungen -t "Deploy $version to production" -b "Pull Request body" -R Vukischmucki/ArgoCD_GitOps,
-        env:
-           GITHUB_TOKEN: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
+      - name: Create Pull Request
+        uses: repo-sync/pull-request@v4
+        with:
+          source_branch: "production-deploy-$GITHUB_RUN_ID"
+          destination_branch: "main"
+          pr_title: "Deploy $version to production"
+          pr_body: "A new version of the application has been prepared for deployment to production. Please review and approve this pull request."
+          github_token: ${{ secrets.REPOSITORY_ACCESS_TOKEN }}
